// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhooksEditControls should match a snapshot with controls content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1de2pym-el-flex-justify-center e2kmzjs-el-flex-container"
      >
        <div
          class="ebqwrow-el-button-group"
        >
          <div
            class="eh76izl-el-button-group-inner"
          >
            <button
              class="ebee6r1-el-intent-primary e1tqqdf9-el-button"
            >
              Edit
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
            <button
              class="ebee6r1-el-intent-primary e1tqqdf9-el-button"
            >
              Ping
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
            <button
              class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
            >
              Copy Public Key
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1de2pym-el-flex-justify-center e2kmzjs-el-flex-container"
    >
      <div
        class="ebqwrow-el-button-group"
      >
        <div
          class="eh76izl-el-button-group-inner"
        >
          <button
            class="ebee6r1-el-intent-primary e1tqqdf9-el-button"
          >
            Edit
            <div
              class="e1q1vabn-el-button-loader"
            />
          </button>
          <button
            class="ebee6r1-el-intent-primary e1tqqdf9-el-button"
          >
            Ping
            <div
              class="e1q1vabn-el-button-loader"
            />
          </button>
          <button
            class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
          >
            Copy Public Key
            <div
              class="e1q1vabn-el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksEditControls should match a snapshot with manage content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <form
        class="el6khyg-el-p8"
      >
        <div
          class="e1q0zwo9-el-flex-justify-between ef457sc-el-flex-align-center ec47sgk-el-mb11 e2kmzjs-el-flex-container"
        >
          <h2
            class="eh96l6x-el-has-bold-text e15ggth7-el-subtitle"
          >
            Edit Webhook
          </h2>
          <div
            class="ebqwrow-el-button-group"
          >
            <div
              class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
            >
              <button
                class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
                type="button"
              >
                Delete
                <div
                  class="e1q1vabn-el-button-loader"
                />
              </button>
              <button
                class="epibvz0-el-intent-secondary e1tqqdf9-el-button"
                type="button"
              >
                Cancel
                <div
                  class="e1q1vabn-el-button-loader"
                />
              </button>
              <button
                class="ebee6r1-el-intent-primary eay05y4-el-button-has-right-chevron e1tqqdf9-el-button"
                type="submit"
              >
                Update
                <div
                  class="e1q1vabn-el-button-loader"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ee6e7by-el-form-layout"
        >
          <div
            class="ep31he9-el-input-wrap-full"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="url"
                placeholder="Enter secure https:// url"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Webhook URL
              </label>
            </div>
          </div>
          <div
            class="ep31he9-el-input-wrap-full"
          >
            <div
              class="e1x57i2-el-flex-wrap e1q0zwo9-el-flex-justify-between ef457sc-el-flex-align-center ehvkknk-el-mb5 e2kmzjs-el-flex-container"
            >
              <div
                class="s1c8so7u-search-min-width e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  placeholder="Search topics to get started"
                />
                <span
                  class="ej9yrfo-el-icon"
                >
                  <svg />
                </span>
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  Subscription topics
                </label>
              </div>
            </div>
            <div
              class="eooz7jy-el-multi-select-input-wrapper"
            >
              <input
                class="eg4njbl-el-multi-select-input"
                id="topic-edit-ids-MOCK_ID"
                name="topicIds"
              />
              <div
                class="e12c6sou-el-multi-select-selected"
              />
            </div>
          </div>
          <div
            class="ep31he9-el-input-wrap-full"
          >
            <label
              class="ek1d8t2-el-ml3 ehvkknk-el-mb5 e1nbkkrq-el-label"
            >
              Subscription customers
            </label>
            <div
              class="eooz7jy-el-multi-select-input-wrapper"
            >
              <input
                class="eg4njbl-el-multi-select-input"
                id="customer-edit-ids-MOCK_ID"
                name="customerIds"
              />
              <div
                class="e12c6sou-el-multi-select-selected"
              />
              <div
                class="ef7odf0-el-multi-select-un-selected"
              >
                <input
                  class="e1wdkc9j-el-multi-select-checkbox"
                  id="test-static-id"
                  type="checkbox"
                />
                <label
                  class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                  for="test-static-id"
                >
                  All Customers
                </label>
                <input
                  class="e1wdkc9j-el-multi-select-checkbox"
                  id="test-static-id"
                  type="checkbox"
                />
                <label
                  class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                  for="test-static-id"
                >
                  Sandbox Estates
                </label>
                <input
                  class="e1wdkc9j-el-multi-select-checkbox"
                  id="test-static-id"
                  type="checkbox"
                />
                <label
                  class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                  for="test-static-id"
                >
                  Reapit Sales
                </label>
                <input
                  class="e1wdkc9j-el-multi-select-checkbox"
                  id="test-static-id"
                  type="checkbox"
                />
                <label
                  class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                  for="test-static-id"
                >
                  Foo Bar
                </label>
              </div>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Status
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="status-edit-toggle-MOCK_ID"
              name="active"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="status-edit-toggle-MOCK_ID"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Active
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                Inactive
              </span>
            </label>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="ignoreEtagOnlyChanges"
                type="checkbox"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Ignore where only the etag has been modified
              </label>
              <span
                class="e15fmnse-el-input-add-on"
              >
                Ignore
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <form
      class="el6khyg-el-p8"
    >
      <div
        class="e1q0zwo9-el-flex-justify-between ef457sc-el-flex-align-center ec47sgk-el-mb11 e2kmzjs-el-flex-container"
      >
        <h2
          class="eh96l6x-el-has-bold-text e15ggth7-el-subtitle"
        >
          Edit Webhook
        </h2>
        <div
          class="ebqwrow-el-button-group"
        >
          <div
            class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
          >
            <button
              class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
              type="button"
            >
              Delete
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
            <button
              class="epibvz0-el-intent-secondary e1tqqdf9-el-button"
              type="button"
            >
              Cancel
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
            <button
              class="ebee6r1-el-intent-primary eay05y4-el-button-has-right-chevron e1tqqdf9-el-button"
              type="submit"
            >
              Update
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="url"
              placeholder="Enter secure https:// url"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Webhook URL
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1x57i2-el-flex-wrap e1q0zwo9-el-flex-justify-between ef457sc-el-flex-align-center ehvkknk-el-mb5 e2kmzjs-el-flex-container"
          >
            <div
              class="s1c8so7u-search-min-width e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                placeholder="Search topics to get started"
              />
              <span
                class="ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Subscription topics
              </label>
            </div>
          </div>
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="topic-edit-ids-MOCK_ID"
              name="topicIds"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            />
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="ek1d8t2-el-ml3 ehvkknk-el-mb5 e1nbkkrq-el-label"
          >
            Subscription customers
          </label>
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="customer-edit-ids-MOCK_ID"
              name="customerIds"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            />
            <div
              class="ef7odf0-el-multi-select-un-selected"
            >
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                All Customers
              </label>
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                Sandbox Estates
              </label>
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                Reapit Sales
              </label>
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                Foo Bar
              </label>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Status
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="status-edit-toggle-MOCK_ID"
            name="active"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="status-edit-toggle-MOCK_ID"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Active
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              Inactive
            </span>
          </label>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="ignoreEtagOnlyChanges"
              type="checkbox"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Ignore where only the etag has been modified
            </label>
            <span
              class="e15fmnse-el-input-add-on"
            >
              Ignore
            </span>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksEditControls should match a snapshot with ping content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <form
        class="el6khyg-el-p8"
      >
        <h2
          class="ek1d8t2-el-ml3 e15ggth7-el-subtitle"
        >
          Test Webhook Subscription
        </h2>
        <div
          class="e20pb60-el-grid"
        >
          <div
            class="eb3z2eu-el-col-split"
          >
            <label
              class="ek1d8t2-el-ml3 e1nbkkrq-el-label"
            >
              Subscription topics
            </label>
            <div
              class="e1979rmu-el-input-group"
            >
              <select
                class="e60u3kb-el-select"
                name="topicId"
              >
                <option
                  value=""
                >
                  None selected
                </option>
                <option />
                <option />
                <option />
              </select>
            </div>
          </div>
          <div
            class="eb3z2eu-el-col-split"
          >
            <p
              class="e1wasvgh-el-body-text"
            >
              To test your Webhook subscription, please select a subscription topic and an example payload for that topic will be sent to the configured URL. For more information, please
               
              <a>
                click here
              </a>
            </p>
            <div
              class="et0k7gk-el-ml-auto ebqwrow-el-button-group"
            >
              <div
                class="eh76izl-el-button-group-inner"
              >
                <button
                  class="epibvz0-el-intent-secondary e1tqqdf9-el-button"
                  type="button"
                >
                  Cancel
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
                <button
                  class="ebee6r1-el-intent-primary eay05y4-el-button-has-right-chevron e1tqqdf9-el-button"
                  type="submit"
                >
                  Test
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <form
      class="el6khyg-el-p8"
    >
      <h2
        class="ek1d8t2-el-ml3 e15ggth7-el-subtitle"
      >
        Test Webhook Subscription
      </h2>
      <div
        class="e20pb60-el-grid"
      >
        <div
          class="eb3z2eu-el-col-split"
        >
          <label
            class="ek1d8t2-el-ml3 e1nbkkrq-el-label"
          >
            Subscription topics
          </label>
          <div
            class="e1979rmu-el-input-group"
          >
            <select
              class="e60u3kb-el-select"
              name="topicId"
            >
              <option
                value=""
              >
                None selected
              </option>
              <option />
              <option />
              <option />
            </select>
          </div>
        </div>
        <div
          class="eb3z2eu-el-col-split"
        >
          <p
            class="e1wasvgh-el-body-text"
          >
            To test your Webhook subscription, please select a subscription topic and an example payload for that topic will be sent to the configured URL. For more information, please
             
            <a>
              click here
            </a>
          </p>
          <div
            class="et0k7gk-el-ml-auto ebqwrow-el-button-group"
          >
            <div
              class="eh76izl-el-button-group-inner"
            >
              <button
                class="epibvz0-el-intent-secondary e1tqqdf9-el-button"
                type="button"
              >
                Cancel
                <div
                  class="e1q1vabn-el-button-loader"
                />
              </button>
              <button
                class="ebee6r1-el-intent-primary eay05y4-el-button-has-right-chevron e1tqqdf9-el-button"
                type="submit"
              >
                Test
                <div
                  class="e1q1vabn-el-button-loader"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
